# sui-frame

./: .gitignore  README.md  README.zh-CN.md
.github/workflows/: release.yml
desktop-client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop-client/src/: App.vue  main.ts
desktop-client/src/api/: native.ts
desktop-client/src/components/: AppNotificationCenter.vue
desktop-client/src/styles/: app.css
desktop-client/src/views/: SearchWorkbench.vue
docs/: README.md  development.md  search-rules.md
mobile-client/: README.md
rules/sources/: default.json
server/: README.md
tauri-desktop/: package-lock.json  package.json
tauri-desktop/scripts/: prepare-pansou-sidecar.mjs
tauri-desktop/src-tauri/: Cargo.toml  tauri.conf.json
tauri-desktop/src-tauri/capabilities/: default.json
tauri-desktop/src-tauri/icons/: icon.icns
tauri-desktop/src-tauri/src/: lib.rs  main.rs
